# ot-harjoitustyo

./: README.md
dokumentaatio/: README.md  vaatimusmaarittely.md
laskarit/: README.md
laskarit/viikko1/: README.md  gitlog.txt
laskarit/viikko2/: pyproject.toml
laskarit/viikko2/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe (downloaded from the internet)/: .coverage
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
ohte-pong/: .coveragerc  .gitignore  README.md  changelog.md  pyproject.toml  scores.db  tasks.py  test.db
ohte-pong/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tyoaikakirjanpito.md  vaatimusmaarittely.md
ohte-pong/src/: gameloop.py  index.py  oneplayer.py  score_database.py  standings.py  style.py  twoplayer.py
ohte-pong/src/db/: create_db.py  score_database.py
ohte-pong/src/objects/: ball.py  clock.py  movement.py  npc.py  object.py  paddle.py  player.py  playingfield.py  score_database.py
ohte-pong/src/tests/: clock_test.py  gameloop_test.py  movement_test.py  object_test.py  oneplayer_test.py  player_test.py  twoplayer_test.py
ohte-pong/src/ui/: leaderboard.py  ui.py
ohte-pong/src/windows/: oneplayer.py  standings.py  start.py  twoplayer.py
