[tool.poetry]
name = "ohte-pong"
version = "0.1.0"
description = ""
authors = ["Cosmo Ciancio <ciancio.cosmo@gmail.com>"]
readme = "README.md"
packages = [{include = "ohte_pong"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
