[tool.poetry]
name = "ohte-pong"
version = "0.1.0"
description = ""
authors = ["Cosmo Ciancio <ciancio.cosmo@gmail.com>"]
readme = "README.md"
packages = [{include = "ohte_pong"}]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^2.0.0"
coverage = "^7.2.3"
pygame = "^2.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
